[gd_scene load_steps=9 format=2]

[ext_resource path="res://assets/sounds/menu/Click.wav" type="AudioStream" id=1]
[ext_resource path="res://scripts/LevelSelector.gd" type="Script" id=2]
[ext_resource path="res://assets/sounds/menu/Focus.wav" type="AudioStream" id=3]
[ext_resource path="res://assets/ui/Button/Button.tscn" type="PackedScene" id=4]
[ext_resource path="res://assets/ui/fonts/button_font.tres" type="DynamicFont" id=5]
[ext_resource path="res://assets/ui/LevelButton/LevelButton.tscn" type="PackedScene" id=6]

[sub_resource type="InputEventKey" id=1]
scancode = 16777217

[sub_resource type="ShortCut" id=3]
shortcut = SubResource( 1 )

[node name="LevelSelector" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="Background" type="ColorRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )

[node name="Level1" parent="." instance=ExtResource( 6 )]
anchor_left = 0.3
anchor_top = 0.3
anchor_right = 0.45
anchor_bottom = 0.55
focus_neighbour_right = NodePath("../Level2")
focus_neighbour_bottom = NodePath("../BackButton")

[node name="Label" type="Label" parent="Level1"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -30.0
margin_top = 5.0
margin_right = 35.5
rect_rotation = -45.0
custom_fonts/font = ExtResource( 5 )
text = "Level 1"
align = 1
valign = 1

[node name="Level2" parent="." instance=ExtResource( 6 )]
anchor_left = 0.5
anchor_top = 0.3
anchor_right = 0.65
anchor_bottom = 0.55
focus_neighbour_left = NodePath("../Level1")
focus_neighbour_bottom = NodePath("../BackButton")

[node name="Label" type="Label" parent="Level2"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -30.0
margin_top = 5.0
margin_right = 35.5
rect_rotation = -45.0
custom_fonts/font = ExtResource( 5 )
text = "Level 2"
align = 1
valign = 1

[node name="BackButton" parent="." instance=ExtResource( 4 )]
anchor_left = 0.5
anchor_top = 0.7
anchor_right = 0.5
anchor_bottom = 0.7
margin_left = -85.0
margin_top = -20.5
margin_right = 85.0
margin_bottom = 20.5
grow_horizontal = 2
grow_vertical = 2
shortcut = SubResource( 3 )

[node name="Label" type="Label" parent="BackButton"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -27.0
margin_top = -15.0
margin_right = 27.0
margin_bottom = 11.0
custom_fonts/font = ExtResource( 5 )
text = "Back"

[node name="FocusAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
bus = "SoundEffects"

[node name="ClickAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 1 )
bus = "SoundEffects"

[node name="Level1Timer" type="Timer" parent="."]
wait_time = 0.2

[node name="Level2Timer" type="Timer" parent="."]
wait_time = 0.2

[node name="BackTimer" type="Timer" parent="."]
wait_time = 0.1

[connection signal="focus_exited" from="Level1" to="." method="_on_Level_focus_exited" binds= [ 1 ]]
[connection signal="mouse_entered" from="Level1" to="." method="_on_mouse_entered" binds= [ 1 ]]
[connection signal="pressed" from="Level1" to="." method="_on_Level1_pressed"]
[connection signal="focus_exited" from="Level2" to="." method="_on_Level_focus_exited" binds= [ 2 ]]
[connection signal="mouse_entered" from="Level2" to="." method="_on_mouse_entered" binds= [ 2 ]]
[connection signal="pressed" from="Level2" to="." method="_on_Level2_pressed"]
[connection signal="focus_exited" from="BackButton" to="." method="_on_Level_focus_exited" binds= [ 0 ]]
[connection signal="mouse_entered" from="BackButton" to="." method="_on_mouse_entered" binds= [ 0 ]]
[connection signal="pressed" from="BackButton" to="." method="_on_BackButton_pressed"]
[connection signal="timeout" from="Level1Timer" to="." method="_on_Level1Timer_timeout"]
[connection signal="timeout" from="Level2Timer" to="." method="_on_Level2Timer_timeout"]
[connection signal="timeout" from="BackTimer" to="." method="_on_Timer_timeout"]
